--- a/Sistema_Examen/nbproject/project.properties
+++ b/Sistema_Examen/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Examen.jar
+dist.jar=${dist.dir}/Sistema_Examen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
