--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /Sistema_Examen/nbproject/private/
 /Sistema_Examen/build/
 /Sistema_Examen/dist/
+/Preguntas/nbproject/private/
+/Preguntas/dist/
+/Preguntas/build/
